[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.3"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.3"
futures-util = "0.3.30"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["sync", "time"] }
sdf = { git = "https://github.com/JoshForletta/sdf.git" }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.67", features = ["DomRectReadOnly", "ResizeObserver", "ResizeObserverEntry"] }
wasmtimer = "0.2.0"
wgpu = { version = "0.19.0", features = ["webgl"] }
